# neuralysis

./: .gitignore  CMakeLists.txt  main.cpp
neuralysis/: CMakeLists.txt
neuralysis/include/: matrix.h
neuralysis/src/: matrix.cpp
